--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,11 @@
     <color name="colorAccent">#7e57c2</color>
 
     <color name="colorWhite">#FFFFFF</color>
+
     <color name="textColorBlue">#2979FF</color>
+    <color name="textColorBlack">#000000</color>
+    <color name="textColorWhite">#FFFFFF</color>
+
+    <color name="colorBusy">#00C853</color>
+    <color name="colorEmpty">#D50000</color>
 </resources>
