design (without validation, date ant time pickers or reports adapter and list items). data and connection classes.

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -40,4 +40,9 @@
     <style name="TextButton" parent="Widget.MaterialComponents.Button.TextButton">
         <item name="cornerRadius">16dp</item>
     </style>
+
+    <style name="Spinner" parent="Widget.AppCompat.Spinner">
+        <item name="android:spinnerMode">dropdown</item>
+        <item name="android:background">@drawable/rounded_corners_background</item>
+    </style>
 </resources>
