--- a/app/src/main/res/layout/orders_dialog.xml
+++ b/app/src/main/res/layout/orders_dialog.xml
@@ -11,9 +11,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_room_name"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/background_primary_dark_oval"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tv_room_name"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_close_black_24dp" />
 
     <TextView
@@ -21,15 +22,16 @@
         style="@style/BigHeadLineTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:gravity="center"
         android:paddingStart="30dp"
         android:paddingEnd="30dp"
         android:text="PS O1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/iv_close"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/iv_close" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
