--- a/app/src/main/res/drawable/background_accent_color_rounded.xml
+++ b/app/src/main/res/drawable/background_accent_color_rounded.xml
@@ -3,5 +3,6 @@
     android:shape="rectangle">
     <stroke
         android:width="1dp"
-        android:color="@color/colorPrimaryDark" />
+        android:color="@color/colorAccent" />
+    <corners android:radius="8dp"/>
 </shape>
