--- a/app/src/main/res/layout/orders_dialog.xml
+++ b/app/src/main/res/layout/orders_dialog.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/background_white_rounded_16">
+    android:background="@drawable/dialog_background">
 
     <ImageView
         android:id="@+id/iv_close"
@@ -12,10 +12,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/background_primary_dark_oval"
+        android:background="@drawable/background_accent_color_oval"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_close_black_24dp" />
+        app:srcCompat="@drawable/ic_close" />
 
     <TextView
         android:id="@+id/tv_room_name"
@@ -40,7 +40,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
-        android:background="@drawable/background_primary_dark_top_rounded"
+        android:background="@drawable/background_accent_color_top_rounded"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_room_name">
@@ -55,8 +55,7 @@
             android:layout_marginTop="16dp"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="Amount"
-            android:textColor="@color/textColorWhite" />
+            android:text="Amount" />
 
         <TextView
             android:id="@+id/tv_category"
@@ -68,8 +67,7 @@
             android:layout_marginTop="16dp"
             android:layout_weight="3"
             android:gravity="center"
-            android:text="Categories"
-            android:textColor="@color/textColorWhite" />
+            android:text="Categories" />
     </LinearLayout>
 
     <androidx.core.widget.NestedScrollView
