--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="colorAccent">#0091EA</color>
 
     <color name="colorWhite">#FFFFFF</color>
+    <color name="colorCafe">#F5D209</color>
 
     <color name="textColorBlue">#2979FF</color>
     <color name="textColorBlack">#000000</color>
