--- a/app/src/main/res/layout/orders_dialog.xml
+++ b/app/src/main/res/layout/orders_dialog.xml
@@ -18,7 +18,7 @@
         app:srcCompat="@drawable/ic_close" />
 
     <TextView
-        android:id="@+id/tv_room_name"
+        android:id="@+id/tv_money"
         style="@style/BigHeadLineTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -44,7 +44,7 @@
         android:background="@drawable/background_accent_color_top_rounded"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_room_name">
+        app:layout_constraintTop_toBottomOf="@+id/tv_money">
 
         <TextView
             android:id="@+id/tv_amount"
