--- a/app/src/main/res/layout/cafe_orders_list_item.xml
+++ b/app/src/main/res/layout/cafe_orders_list_item.xml
@@ -14,10 +14,9 @@
         android:layout_marginTop="16dp"
         android:layout_weight="1"
         android:gravity="center"
-        android:text="Amount" />
+        android:text="@string/amount" />
 
     <TextView
-        android:gravity="center"
         android:id="@+id/tv_category"
         style="@style/SmallHeadLineTextView"
         android:layout_width="wrap_content"
@@ -25,6 +24,19 @@
         android:layout_margin="4dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:layout_weight="3"
-        android:text="Categories" />
+        android:layout_weight="2"
+        android:gravity="center"
+        android:text="@string/categories" />
+
+    <TextView
+        android:id="@+id/tv_price"
+        style="@style/SmallHeadLineTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="4dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_weight="2"
+        android:gravity="center"
+        android:text="@string/price" />
 </LinearLayout>
