--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,11 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/selectReportFragment"
         android:title="@string/reports"
-        app:showAsAction="always"
         android:icon="@drawable/ic_reports"/>
+
+    <item android:id="@+id/IpFragment"
+        android:title="@string/reports"
+        android:icon="@drawable/ic_settings"/>
+
+    <item android:id="@+id/action_refresh"
+        android:title="@string/refresh"
+        app:showAsAction="always"
+        android:icon="@drawable/ic_refresh"/>
 
     <item android:id="@+id/action_logout"
         android:title="@string/logout"
-        app:showAsAction="ifRoom"
         android:icon="@drawable/ic_logout"/>
 </menu>
