--- a/app/src/main/res/layout/loading_view.xml
+++ b/app/src/main/res/layout/loading_view.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ProgressBar xmlns:android="http://schemas.android.com/apk/res/android"
+<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/progressBar"
-    style="?android:attr/progressBarStyle"
+    android:id="@+id/iv_loading"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="160dp"
+    android:padding="140dp"
     android:visibility="gone"
+    app:srcCompat="@drawable/avd_controller_animator"
     android:background="@color/colorDialogBackground"
     app:layout_constraintBottom_toBottomOf="parent"
     tools:visibility="visible" />
